Автономность, qr, симуляторы карты и ридера, роли
